# k-alg

./: .gitignore  CMakeLists.txt  LICENSE  README.md
UnitTests/: CMakeLists.txt
UnitTests/src/: UnitTest.kalg.cpp
include/: kalg.h
src/: kalg.cpp
